--- a/NewRelicExampleApp/android/app/src/main/res/values/strings.xml
+++ b/NewRelicExampleApp/android/app/src/main/res/values/strings.xml
@@ -1,8 +1,3 @@
-<!-- 
-    Copyright (c) 2022-present New Relic Corporation. All rights reserved.
-    SPDX-License-Identifier: Apache-2.0 
--->
-
 <resources>
-    <string name="app_name">AgentTestApp</string>
+    <string name="app_name">NewRelicExampleApp</string>
 </resources>
